add: update class
